<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>StackVizGui</class>
 <widget class="QMainWindow" name="StackVizGui">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1280</width>
    <height>960</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>StackViz</string>
  </property>
  <property name="windowIcon">
   <iconset resource="resources.qrc">
    <normaloff>:/visimpl.png</normaloff>:/visimpl.png</iconset>
  </property>
  <widget class="QWidget" name="centralwidget"/>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>1280</width>
     <height>22</height>
    </rect>
   </property>
   <widget class="QMenu" name="menuFile">
    <property name="title">
     <string>File</string>
    </property>
    <addaction name="actionCloseData"/>
    <addaction name="separator"/>
    <addaction name="actionOpenSubsetEventsFile"/>
    <addaction name="separator"/>
   </widget>
   <widget class="QMenu" name="menuOptions">
    <property name="title">
     <string>Options</string>
    </property>
    <addaction name="separator"/>
    <addaction name="actionAutoNamingSelections"/>
    <addaction name="actionFill_Plots"/>
   </widget>
   <widget class="QMenu" name="menuPlayback">
    <property name="title">
     <string>Playback</string>
    </property>
    <addaction name="actionFocusOnPlayhead"/>
    <addaction name="actionFollowPlayhead"/>
   </widget>
   <addaction name="menuFile"/>
   <addaction name="menuPlayback"/>
   <addaction name="menuOptions"/>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
  <widget class="QToolBar" name="toolBar">
   <property name="windowTitle">
    <string>toolBar</string>
   </property>
   <attribute name="toolBarArea">
    <enum>TopToolBarArea</enum>
   </attribute>
   <attribute name="toolBarBreak">
    <bool>false</bool>
   </attribute>
   <addaction name="actionOpenSubsetEventsFile"/>
   <addaction name="separator"/>
   <addaction name="actionCloseData"/>
   <addaction name="actionShowDataManager"/>
   <addaction name="separator"/>
   <addaction name="actionFocusOnPlayhead"/>
   <addaction name="actionFollowPlayhead"/>
   <addaction name="separator"/>
   <addaction name="actionFill_Plots"/>
  </widget>
  <action name="actionQuit">
   <property name="text">
    <string>Quit</string>
   </property>
   <property name="shortcut">
    <string>Ctrl+Q</string>
   </property>
  </action>
  <action name="actionAbout">
   <property name="text">
    <string>About ...</string>
   </property>
  </action>
  <action name="actionOpenBlueConfig">
   <property name="icon">
    <iconset resource="resources.qrc">
     <normaloff>:/icons/folder-bc.svg</normaloff>:/icons/folder-bc.svg</iconset>
   </property>
   <property name="text">
    <string>Open BlueConfig...</string>
   </property>
   <property name="toolTip">
    <string>Open BlueConfig</string>
   </property>
   <property name="shortcut">
    <string>Ctrl+Shift+B</string>
   </property>
  </action>
  <action name="actionCloseData">
   <property name="enabled">
    <bool>false</bool>
   </property>
   <property name="icon">
    <iconset resource="resources.qrc">
     <normaloff>:/icons/close.svg</normaloff>:/icons/close.svg</iconset>
   </property>
   <property name="text">
    <string>Close Data</string>
   </property>
   <property name="toolTip">
    <string>Close Data</string>
   </property>
   <property name="shortcut">
    <string>Ctrl+Shift+C</string>
   </property>
   <property name="visible">
    <bool>false</bool>
   </property>
   <property name="iconVisibleInMenu">
    <bool>true</bool>
   </property>
  </action>
  <action name="actionAutoNamingSelections">
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="text">
    <string>Auto Naming Selections</string>
   </property>
   <property name="shortcut">
    <string>Ctrl+A</string>
   </property>
  </action>
  <action name="actionFill_Plots">
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="checked">
    <bool>true</bool>
   </property>
   <property name="icon">
    <iconset resource="resources.qrc">
     <normaloff>:/icons/fill.svg</normaloff>:/icons/fill.svg</iconset>
   </property>
   <property name="text">
    <string>Fill Plots</string>
   </property>
   <property name="toolTip">
    <string>Toggle line/fill plots</string>
   </property>
  </action>
  <action name="actionTogglePlaybackDock">
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="icon">
    <iconset resource="resources.qrc">
     <normaloff>:/icons/play.svg</normaloff>
     <normalon>:/icons/play.svg</normalon>:/icons/play.svg</iconset>
   </property>
   <property name="text">
    <string>Toggle Playback Dock</string>
   </property>
   <property name="toolTip">
    <string>Show/Hide the playback Dock</string>
   </property>
   <property name="shortcut">
    <string>Ctrl+P</string>
   </property>
  </action>
  <action name="actionShowDataManager">
   <property name="icon">
    <iconset resource="resources.qrc">
     <normaloff>:/icons/generic-info.svg</normaloff>:/icons/generic-info.svg</iconset>
   </property>
   <property name="text">
    <string>Show Data Manager</string>
   </property>
  </action>
  <action name="actionFocusOnPlayhead">
   <property name="icon">
    <iconset resource="resources.qrc">
     <normaloff>:/icons/focus.svg</normaloff>:/icons/focus.svg</iconset>
   </property>
   <property name="text">
    <string>Focus on playhead</string>
   </property>
   <property name="toolTip">
    <string>Focus on playhead</string>
   </property>
  </action>
  <action name="actionFollowPlayhead">
   <property name="checkable">
    <bool>true</bool>
   </property>
   <property name="icon">
    <iconset resource="resources.qrc">
     <normaloff>:/icons/autofocus.svg</normaloff>:/icons/autofocus.svg</iconset>
   </property>
   <property name="text">
    <string>Follow playhead</string>
   </property>
   <property name="toolTip">
    <string>Follow playhead</string>
   </property>
  </action>
  <action name="actionOpenCSVFiles">
   <property name="icon">
    <iconset resource="resources.qrc">
     <normaloff>:/icons/folder-csv.svg</normaloff>:/icons/folder-csv.svg</iconset>
   </property>
   <property name="text">
    <string>Open CSV Files...</string>
   </property>
   <property name="toolTip">
    <string>Open CSV Files</string>
   </property>
  </action>
  <action name="actionOpenSubsetEventsFile">
   <property name="icon">
    <iconset resource="resources.qrc">
     <normaloff>:/icons/folder-doc.svg</normaloff>:/icons/folder-doc.svg</iconset>
   </property>
   <property name="text">
    <string>Open Subset Events File...</string>
   </property>
   <property name="toolTip">
    <string>Open subset/events file</string>
   </property>
  </action>
  <action name="actionOpenH5Files">
   <property name="icon">
    <iconset resource="resources.qrc">
     <normaloff>:/icons/folder-h5.svg</normaloff>:/icons/folder-h5.svg</iconset>
   </property>
   <property name="text">
    <string>Open H5 network and activity files...</string>
   </property>
   <property name="toolTip">
    <string>Open HDF5 network and activity files...</string>
   </property>
  </action>
 </widget>
 <resources>
  <include location="resources.qrc"/>
 </resources>
 <connections/>
</ui>
